# mycology-records-vuetify

./: README.md  docker-compose.yaml
.github/workflows/: main.yaml
backend/: .env  Dockerfile  Makefile  alembic.ini  commands.md  main.py  pyproject.toml  run.sh  settings.py  tox.ini
backend/alembic_migrations/: env.py
backend/alembic_migrations/versions/: 2023_02_02_2246-adc9523a77fd_.py  2023_02_03_0505-bb021c2e3e84_.py
backend/models/: base.py  database.py  grows.py  imports.py  media.py  spawn.py  strains.py  users.py
backend/routes/: _routes.py  dependencies.py  grows.py  media.py  routes.py  security.py  spawn.py  strains.py
backend/schemas/: grows.py  media.py  spawn.py  strains.py  users.py
backend/services/: queue.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  main.ts  types.d.ts
frontend/src/assets/: main.css
frontend/src/components/: NavBar.vue
frontend/src/components/base/: Button.vue  DropdownMenu.vue  Modal.vue  NavBar.vue  SideBar.vue
frontend/src/components/forms/: DateInput.vue  TextInput.vue
frontend/src/components/grows/: GrowCard.vue  GrowForm.vue
frontend/src/components/media/: MediaCard.vue  MediaForm.vue
frontend/src/interfaces/: Grow.ts  Ingredient.ts  Media.ts  Spawn.ts  Strain.ts
frontend/src/networking/: crud.base.ts  grow.service.ts  ingredient.service.ts  media.service.ts  spawn.service.ts  strain.service.ts
frontend/src/router/: index.ts
frontend/src/stores/: AppStore.ts
frontend/src/views/: HomeView.vue  SpawnView.vue
(+9 files in other folders)
